--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "clsx": "^2.1.1",
     "motion": "^12.4.10",
     "next": "15.2.1",
+    "next-i18next": "^15.4.2",
+    "next-intl": "^3.26.5",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
