--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tabler/icons-react": "^3.30.0",
     "@types/nodemailer": "^6.4.17",
     "clsx": "^2.1.1",
+    "googleapis": "^148.0.0",
     "motion": "^12.4.10",
     "next": "15.2.1",
     "next-i18next": "^15.4.2",
@@ -24,14 +25,14 @@
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
