--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clsx": "^2.1.1",
     "googleapis": "^148.0.0",
     "motion": "^12.4.10",
-    "next": "15.2.1",
+    "next": "^15.3.0",
     "next-i18next": "^15.4.2",
     "next-intl": "^3.26.5",
     "nodemailer": "^6.10.0",
