--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/nodemailer": "^6.4.17",
     "clsx": "^2.1.1",
     "googleapis": "^148.0.0",
+    "lucide-react": "^0.507.0",
     "motion": "^12.4.10",
     "next": "^15.3.0",
     "next-i18next": "^15.4.2",
